[package]
name = "picodata-rmp-serde"
version = "1.0.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Serde bindings for RMP (forked from rmp-serde)"
repository = "https://github.com/picodata/msgpack-rust"
documentation = "https://docs.rs/picodata-rmp-serde"
readme = "README.md"
keywords = ["msgpack", "MessagePack", "serde", "serialization"]
categories = ["encoding"]
edition = "2018"

[dependencies]
byteorder = "1.4.3"
serde = "1.0.133"
rmp = { version = "0.8.8", path = "../rmp" }

[dev-dependencies]
rmpv = { path = "../rmpv" }
serde_bytes = "0.11.5"
serde_derive = "1.0.133"

[badges]
maintenance = { status = "passively-maintained" }
